<resources>
    <string name="app_name">Food Scout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="signin">SignIn</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="welcome">Welcome to Deliver now</string>
    <string name="name">name</string>
    <string name="surname">surname</string>
    <string name="phone_number">phone</string>
    <string name="register">Create an account</string>
    <string name="registerText">Please register you details below</string>
    <string name="Registerbutton">Register</string>
    <string name="dont_have_an_account">Dont have an account ? click here</string>
    <string name="confrim_password">confrim Password</string>
    <string name="delivery_location">delivery location</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="lets_begin">Lets Begin</string>
    <string name="sign_in_first">sign in first</string>
    <string name="use_location">Use Location</string>
    <!--    nav-->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="title_activity_draawer">DraawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="title_activity_drawerr">DrawerrActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="my_account">My Account</string>
    <string name="Login">Login</string>
    <string name="sign_in_with_phone_numebr">Sign in with Phone</string>
    <string name="login">Login</string>
    <string name="sign_in_with_email">Sign in with Email</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="new_delivery">New Delivery</string>
    <string name="loading">............</string>
    <string name="drop_off">Drop Off</string>
    <string name="active_delivery">Active Delivery</string>
    <string name="completed_deliveries">Completed deliveries</string>
    <string name="order_history">Order History</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="forgot_password">forgot password ?</string>
    <string name="picked_up_delivery">Picked up Delivery</string>
    <string name="open_map">Directions on Map</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>
    <string name="change_password">Change password</string>
    <string name="accout_details">Accout Details</string>
    <string name="raustarant_name">Raustarant Name</string>
    <string name="location">location</string>
    <string name="pending_delivery">Pending Delivery</string>
    <string name="delivered">Delivered</string>
    <string name="register_restaurant">Register Restaurant</string>
    <string name="home">Home</string>
    <string name="locationDescription">We need to kknow your current location in order to show you relevant restaurant around your and dleiver your order roght where you aeer</string>
    <string name="order_in_progress">Order in Progress</string>
    <string name="active_orders">Active Orders</string>
</resources>