<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_account"
        android:title="@string/my_account"
        android:titleCondensed="my_account"/>

    <item
        android:id="@+id/nav_active_deliveries"
        android:title="@string/active_delivery"
        android:titleCondensed="active_delivery"/>

    <item
        android:id="@+id/nav_completed_deliveries"
        android:title="@string/completed_deliveries"
        android:titleCondensed="complete deliveries"/>


    <item
        android:id="@+id/nav_order_history"
        android:title="@string/order_history"
        android:titleCondensed="order_History"/>

    <item
        android:id="@+id/nav_help"
        android:title="@string/help"
        android:titleCondensed="help"/>

    <item
        android:id="@+id/about"
        android:title="@string/about"
        android:titleCondensed="about"/>


    <item
        android:id="@+id/nav_settings"
        android:title="@string/settings"
        android:titleCondensed="settings"/>

    <item
        android:id="@+id/nav_logout"
        android:title="@string/logout"
        android:titleCondensed="Logout"/>


</menu>