<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context="co.za.foodscout.activities.delivery.DeliveryDetailsActivity">

  <Button
      android:id="@+id/openMapsBtn"
      android:layout_width="195dp"
      android:layout_height="46dp"
      android:layout_gravity="center"
      android:layout_marginBottom="16dp"
      android:text="@string/open_map"
      android:textSize="12sp"
      app:backgroundTint="@color/buttons"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <com.google.android.material.card.MaterialCardView
      android:id="@+id/deliveriesFromCardView"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:background="@drawable/rounded_corner_cards"
      android:checkable="true"
      android:clickable="true"
      android:focusable="true"
      android:gravity="center"
      android:minHeight="48dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/DeliveriesDProgressBar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_corner_cards"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp">

      <!-- Title, secondary and supporting text -->

      <TextView
          android:id="@+id/deliveryOrderNumber"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:text="TextView"
          android:textAppearance="@style/tabTextSize"
          android:textSize="18sp" />

      <TextView
          android:id="@+id/deliveryFromDetails"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="0dp"
          android:layout_marginLeft="0dp"
          android:layout_marginTop="2dp"
          android:layout_marginEnd="2dp"
          android:layout_marginRight="2dp"
          android:layout_marginBottom="2dp"
          android:text="@string/loading"
          android:textAllCaps="false"
          android:textAppearance="@style/TextAppearance.AppCompat.Body1"
          android:textColor="@android:color/primary_text_light"
          android:textSize="18sp" />

      <TextView
          android:id="@+id/fromHeaderTxt"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="2dp"
          android:layout_marginLeft="2dp"
          android:layout_marginTop="2dp"
          android:layout_marginEnd="2dp"
          android:layout_marginRight="2dp"
          android:layout_marginBottom="2dp"
          android:text="@string/loading"
          android:textAppearance="@style/TextAppearance.AppCompat.Body2"
          android:textColor="?android:attr/textColorSecondary"
          android:textSize="14sp"
          app:drawableLeftCompat="@drawable/clock" />

      <TextView
          android:id="@+id/deliveryFromTxt"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="2dp"
          android:layout_marginLeft="2dp"
          android:layout_marginTop="2dp"
          android:layout_marginEnd="2dp"
          android:layout_marginRight="2dp"
          android:layout_marginBottom="2dp"
          android:text="@string/loading"
          android:textAppearance="@style/TextAppearance.AppCompat.Medium"
          android:textColor="?android:attr/textColorSecondary"
          android:textSize="14sp"
          android:textStyle="italic"
          app:drawableLeftCompat="@drawable/location" />

      <TextView
          android:id="@+id/destinationHeaderTxt"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="0dp"
          android:layout_marginLeft="0dp"
          android:layout_marginTop="2dp"
          android:layout_marginEnd="2dp"
          android:layout_marginRight="2dp"
          android:layout_marginBottom="2dp"
          android:text="@string/drop_off"
          android:textAllCaps="true"
          android:textAppearance="@style/TextAppearance.AppCompat.Body1"
          android:textColor="@android:color/primary_text_light"
          android:textSize="16sp" />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">

      </LinearLayout>

      <TextView
          android:id="@+id/driverDeliveryUserDetails"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="2dp"
          android:layout_marginLeft="2dp"
          android:layout_marginTop="2dp"
          android:layout_marginEnd="2dp"
          android:layout_marginRight="2dp"
          android:text="@string/loading"
          android:textAppearance="@style/TextAppearance.AppCompat.Body2"
          android:textColor="?android:attr/textColorSecondary"
          android:textSize="14sp"
          app:drawableLeftCompat="@drawable/account" />

      <TextView
          android:id="@+id/driverDeliveryDestination"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="2dp"
          android:layout_marginLeft="2dp"
          android:layout_marginTop="2dp"
          android:layout_marginEnd="2dp"
          android:layout_marginRight="2dp"
          android:layout_marginBottom="2dp"
          android:text="@string/loading"
          android:textAppearance="@style/TextAppearance.AppCompat.Medium"
          android:textColor="?android:attr/textColorSecondary"
          android:textSize="14sp"
          android:textStyle="italic"
          app:drawableLeftCompat="@drawable/location" />

      <FrameLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical">

        <Button
            android:id="@+id/deliveryPickUpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/picked_up_delivery"
            android:textSize="12sp"
            app:backgroundTint="@color/buttons" />

        <Button
            android:id="@+id/deliveryCompleteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/check_circle_outline"
            android:text="@string/delivered"
            android:textSize="12sp"
            app:backgroundTint="@color/buttons" />

      </FrameLayout>


      <androidx.fragment.app.FragmentContainerView
          android:id="@+id/driverDeliveryMap"
          android:name="com.google.android.gms.maps.SupportMapFragment"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp" />

    </LinearLayout>
  </com.google.android.material.card.MaterialCardView>


  <ProgressBar
      android:id="@+id/DeliveriesDProgressBar"
      style="@style/Widget.AppCompat.ProgressBar.Horizontal"
      android:layout_width="0dp"
      android:layout_height="8dp"
      android:layout_marginTop="51dp"
      android:indeterminate="true"
      android:theme="@style/ProgressBarStyle"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.533"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/floatingActionButton5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:layout_marginRight="16dp"
      android:clickable="true"
      app:backgroundTint="@color/main_theme"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.46"
      app:srcCompat="@drawable/phone" />

</androidx.constraintlayout.widget.ConstraintLayout>